tests/errors/test_too_few_arguments.mob
// Test too few arguments error
print("Testing too few arguments...");
func add(a, b) {
    return a + b;
}

var sum = add(1);  // Too few arguments
print("This should not print");
